@@ -291,6 +291,13 @@ public class NamenodeFsck {
       } while (thisListing.hasMore());
       return;
     }
+    if (file.isSymlink()) {
+      if (showFiles) {
+        out.println(path + " <symlink>");
+      }
+      res.totalSymlinks++;
+      return;
+    }
     long fileLen = file.getLen();
     // Get block locations without updating the file access time 
     // and without block access tokens
@@ -671,6 +678,7 @@ public class NamenodeFsck {
     long totalFiles = 0L;
     long totalOpenFiles = 0L;
     long totalDirs = 0L;
+    long totalSymlinks = 0L;
     long totalSize = 0L;
     long totalOpenFilesSize = 0L;
     long totalReplicas = 0L;
@@ -713,6 +721,7 @@ public class NamenodeFsck {
       }
       res.append("\n Total dirs:\t").append(totalDirs).append(
           "\n Total files:\t").append(totalFiles);
+      res.append("\n Total symlinks:\t\t").append(totalSymlinks);
       if (totalOpenFiles != 0) {
         res.append(" (Files currently being written: ").append(totalOpenFiles)
             .append(")");
